# FlexLogTemplater

./: CMakeLists.txt  README.md  log_example.txt
flt/clustering/: agglomerative.hpp  cluster_utils.hpp  distance_classifier.hpp
flt/logline/: host_element.hpp  syslog.hpp  timestamp_element.hpp
flt/parameter_filter/: common_regex_filters.hpp  filter_array.hpp  ipv6_address_filter.hpp  regex_filter.hpp
flt/string/: levenshtein_distance.hpp  levenshtein_path.hpp  longest_common_subsequence.hpp  string_table.hpp  weighted_edit_distance.hpp  word_iterator.hpp
flt/templating/: online_templater.hpp
flt/util/: cache_adaptors.hpp  hash_combine.hpp  sigmoids.hpp  type_utils.hpp
tests/: CMakeLists.txt  test_WED.cpp  test_agglo.cpp  test_cache_adp.cpp  test_dist_classifier.cpp  test_hc.cpp  test_lcs.cpp  test_lcs_complex.cpp  test_levensh.cpp  test_logps.cpp  test_ordered_string_cache.cpp  test_syslog_cluster.cpp  test_syslog_cluster_by_tag.cpp  test_syslog_nested_cluster_by_tag.cpp  test_syslog_reader.cpp  test_wit.cpp
tools/: CMakeLists.txt  online_templater.cpp
